Fixed menu, status, minigame vertical alignment

--- a/css/MiniGameView.css
+++ b/css/MiniGameView.css
@@ -4,9 +4,7 @@
  * Copyright (c) 2008, 2009 Peter Parente under the terms of the BSD license.
  * http://creativecommons.org/licenses/BSD/
  */
- 
 .ssMiniGameView {
-    visibility: hidden;
     display: table; 
     position: relative; 
     overflow: hidden;
